[package]
name = "sequorch_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking", "serialize"] }
bevy_editor_pls = "0.4.0"
bevy_math = {version = "0.10.1", features = ["serialize"]}
bevy_reflect = { version = "0.10.1", features = ["bevy_math"]}
