[package]
name = "sequorch_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_editor_pls = "0.4.0"
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
