[package]
name = "sequorch_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
editor = ["dep:bevy_editor_pls"]

[dependencies]
bevy = "0.11"
bevy_editor_pls = { version = "0.4.0", optional = true }
clap = { version = "4.3", features = ["derive"] }
serde = { version = "1.0.164", features = ["derive"] }
